--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "super",
   "version": "1.0.0",
   "description": "An app for fictionsl super hero characters ",
-  "main": "index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel ./public/index.html",
+    "build": "parcel build ./public/index.html"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,13 @@
   "dependencies": {
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "devDependencies": {
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.5",
+    "parcel": "^2.6.0",
+    "process": "^0.11.10",
+    "typescript": "^4.7.2"
   }
 }
