--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/fiyintheslim/superhero#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
+    "@types/styled-components": "^5.1.25",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
+    "styled-components": "^5.3.5"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
