--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@types/styled-components": "^5.1.25",
+    "gsap": "^3.10.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
