--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
+    "@types/node": "^17.0.39",
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "parcel": "^2.6.0",
