--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "parcel": "^2.6.0",
     "process": "^0.11.10",
     "typescript": "^4.7.2"
-  }
+  },
+  "proxy":"https://superheroapi.com/api/6282498035145229/"
 }
